--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   http: ^0.12.2
   intl: ^0.16.1
   flutter_launcher_icons: "^0.8.0"
+  wakelock: ^0.1.4+2
+  socket_io_client: ^1.0.1
 
 flutter_icons:
   android: "launcher_icon"
